# sentinel-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: rust.yml
src/: main.rs
tests/: e2e.rs
